--- a/prediction-notebook.ipynb
+++ b/prediction-notebook.ipynb
@@ -31,11 +31,12 @@
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from xgboost import XGBClassifier\n",
+    "!pip install catboost",
     "from catboost import CatBoostClassifier\n",
     "from sklearn import metrics\n",
     "\n",
     "# Loading data\n",
-    "df = pd.read_csv('Telco-Customer-Churn.csv')\n",
+    "df = pd.read_csv('/content/Telco-Customer-Churn.csv')\n",
     "\n",
     "# Remove customerID as it's not useful for analysis\n",
     "df = df.drop(['customerID'], axis=1)\n",
