--- a/prediction-notebook.ipynb
+++ b/prediction-notebook.ipynb
@@ -31,7 +31,7 @@
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from xgboost import XGBClassifier\n",
-    "!pip install catboost",
+    "!pip install catboost\n",
     "from catboost import CatBoostClassifier\n",
     "from sklearn import metrics\n",
     "\n",
