--- a/prediction-notebook.ipynb
+++ b/prediction-notebook.ipynb
@@ -5,7 +5,7 @@
    "id": "f7d97969",
    "metadata": {},
    "source": [
-    "## 1. Loading Libraries, Data and Data Cleaning"
+    "## 1. Load and Visualise the Data"
    ]
   },
   {
@@ -48,24 +48,8 @@
     "df.fillna(df[\"TotalCharges\"].mean())\n",
     "\n",
     "# Set numerical boolean values to string\n",
-    "df[\"SeniorCitizen\"]= df[\"SeniorCitizen\"].map({0: \"No\", 1: \"Yes\"})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c59b96ec",
-   "metadata": {},
-   "source": [
-    "## 2. Visualise Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cd21e4e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df[\"SeniorCitizen\"]= df[\"SeniorCitizen\"].map({0: \"No\", 1: \"Yes\"})",
+    "\n"
     "colour_map = [\"#EF4444\",\"#10B981\"]\n",
     "\n",
     "# Gender Distribution\n",
@@ -111,7 +95,7 @@
    "id": "bb82e1be",
    "metadata": {},
    "source": [
-    "## 3. Preprocess Data and Train Models"
+    "## 2. Preprocess Data and Train Models"
    ]
   },
   {
@@ -192,7 +176,7 @@
    "id": "02f82a4d",
    "metadata": {},
    "source": [
-    "## 4. Make Predictions"
+    "## 3. Make Predictions"
    ]
   },
   {
