--- a/prediction-notebook.ipynb
+++ b/prediction-notebook.ipynb
@@ -5,7 +5,8 @@
    "id": "f7d97969",
    "metadata": {},
    "source": [
-    "## 1. Load and Visualise the Data"
+    "## 1. Load and Visualise Data\n",
+    "This section loads the provided customer data and provideds insight into the distrobution of different statistics"
    ]
   },
   {
@@ -48,8 +49,9 @@
     "df.fillna(df[\"TotalCharges\"].mean())\n",
     "\n",
     "# Set numerical boolean values to string\n",
-    "df[\"SeniorCitizen\"]= df[\"SeniorCitizen\"].map({0: \"No\", 1: \"Yes\"})",
-    "\n"
+    "df[\"SeniorCitizen\"]= df[\"SeniorCitizen\"].map({0: \"No\", 1: \"Yes\"})\n",
+    "\n",
+    "# Visualise Data\n",
     "colour_map = [\"#EF4444\",\"#10B981\"]\n",
     "\n",
     "# Gender Distribution\n",
@@ -95,7 +97,8 @@
    "id": "bb82e1be",
    "metadata": {},
    "source": [
-    "## 2. Preprocess Data and Train Models"
+    "## 2. Preprocess Data and Train Models\n",
+    "This section will train 4 models on the provided data and output the results including their accuracy in testing"
    ]
   },
   {
@@ -176,7 +179,10 @@
    "id": "02f82a4d",
    "metadata": {},
    "source": [
-    "## 3. Make Predictions"
+    "## 3. Make Predictions\n",
+    "Select a the trained model to use for your prediction (the accuracy of each model can be viewed in the previous section)\n",
+    "\n",
+    "Fill out the customer data using a random row from the customer data file"
    ]
   },
   {
