--- a/prediction-notebook.ipynb
+++ b/prediction-notebook.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "## 1. Load and Visualise Data\n",
-    "This section loads the provided customer data and provideds insight into the distrobution of different statistics",
+    "This section loads the provided customer data and provideds insight into the distrobution of different statistics\n",
     "\n",
-    "Ensure the customer data has been uploaded to the run time"
+    "Ensure the customer data has been uploaded to the run time\n"
    ]
   },
   {
