--- a/prediction-notebook.ipynb
+++ b/prediction-notebook.ipynb
@@ -142,7 +142,7 @@
     "CatBoostModel.fit(X_train, y_train)\n",
     "predicted_y = CatBoostModel.predict(X_test)\n",
     "accuracy_cat = accuracy_score(y_test, predicted_y)\n",
-    "print(\"CatBoost accuracy:\",accuracy_cat)\n",
+    "print(\"CatBoost accuracy:\", round(accuracy_cat*100, 2), \"%\")\n",
     "print(\"\\n\", classification_report(y_test, predicted_y))\n",
     "print(\"\\n ------------------------------------------------------------------------------- \\n\")\n",
     "\n",
@@ -150,7 +150,7 @@
     "RandomForestModel = RandomForestClassifier(n_estimators=500 , oob_score = True, n_jobs = -1, random_state =50, max_features = \"sqrt\", max_leaf_nodes = 30)\n",
     "RandomForestModel.fit(X_train, y_train)\n",
     "prediction_test = RandomForestModel.predict(X_test)\n",
-    "print(\"Random Forest Model accuracy is :\", metrics.accuracy_score(y_test, prediction_test))\n",
+    "print(\"Random Forest Model accuracy:\", round(metrics.accuracy_score(y_test, prediction_test)*100, 2), \"%\")\n",
     "print(\"\\n\", classification_report(y_test, prediction_test))\n",
     "print(\"\\n ------------------------------------------------------------------------------- \\n\")\n",
     "\n",
@@ -159,7 +159,7 @@
     "XGBoostModel.fit(X_train, y_train)\n",
     "predicted_y = XGBoostModel.predict(X_test)\n",
     "accuracy_xgb = XGBoostModel.score(X_test,y_test)\n",
-    "print(\"XGBoost accuracy:\",accuracy_xgb)\n",
+    "print(\"XGBoost accuracy:\", round(accuracy_xgb*100, 2), \"%\")\n",
     "print(\"\\n\", classification_report(y_test, predicted_y))\n",
     "print(\"\\n ------------------------------------------------------------------------------- \\n\")\n",
     "\n",
@@ -168,7 +168,7 @@
     "LogisticRegressionModel.fit(X_train,y_train)\n",
     "lr_pred = LogisticRegressionModel.predict(X_test)\n",
     "accuracy_lr = accuracy_score(y_test, lr_pred)\n",
-    "print(\"Logistic Regression accuracy is :\",accuracy_lr)\n",
+    "print(\"Logistic Regression accuracy:\", round(accuracy_lr*100, 2), \"%\")\n",
     "\n",
     "report = classification_report(y_test,lr_pred)\n",
     "print(\"\\n\", report)\n",
